# iOS_Bazel_Pods_Test

./: MODULE.bazel  WORKSPACE
